# MorseCodeTrainer

./: .dockerignore  .gitignore  DEVPLAN.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  morsetrainer.spec  pyproject.toml  requirements-dev.txt  run.py
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
morsetrainer/: __init__.py  __main__.py
requirements/: requirements-dev.txt  requirements.txt
resources/icons/: README.md  morsetrainer.icns
src/: __main__.py  pytest.ini
src/main/python/: __init__.py  __main__.py  application.py  main.py  navigator.py  view_stack.py
src/main/python/controllers/: __init__.py  application_controller.py  flashcard_controller.py  protocols.py  test_controller.py  translation_controller.py  translation_sandbox_controller.py
src/main/python/exceptions/: __init__.py  audio.py  base.py  session.py  translation.py  validation.py
src/main/python/model/: __init__.py  flashcard_session.py  test_session.py  translation_session.py
src/main/python/resources/: __init__.py  audio_data.py  constants.py  exercise_data.py  morse_data.py
src/main/python/services/: __init__.py  audio_cache.py  audio_provider.py  audio_settings.py  data_provider.py  morse_audio.py
src/main/python/utils/: __init__.py  morse_translator.py
src/main/python/views/: __init__.py  audio_section.py  flashcard_view.py  home_view.py  test_menu_screen.py  test_review_screen.py  test_runner_screen.py  test_shared.py  test_view.py  theme.py  translation_sandbox_sections.py  translation_sandbox_view.py  translation_section.py  translation_view.py  widgets.py
src/tests/: conftest.py  test_smoke.py
src/tests/application/: test_wiring.py
src/tests/controllers/: test_flashcard_presenter.py  test_sandbox_presenter.py  test_test_presenter.py  test_translation_presenter.py
src/tests/exceptions/: test_audio.py  test_base.py  test_session.py  test_translation.py  test_validation.py
src/tests/model/: test_flashcard_session.py  test_test_session.py  test_translation_session.py
src/tests/resources/: test_constants.py
src/tests/services/: conftest.py  test_audio_cache.py  test_audio_settings.py  test_data_provider.py  test_morse_audio.py
src/tests/utils/: test_morse_translator.py  test_morse_translator_parametrized.py  test_morse_translator_property.py
src/tests/views/: test_regressions.py  test_theme.py  test_widgets.py
