[project]
name = "morse-code-trainer"
version = "1.0.0"
description = "An interactive Morse code learning application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sandersirge"}
]
keywords = ["morse", "code", "trainer", "education", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "customtkinter>=5.2.2",
    "pygame-ce>=2.5.6",
    "ttkbootstrap>=1.19.2",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/sandersirge/MorseCodeProgram"
Repository = "https://github.com/sandersirge/MorseCodeProgram"
Issues = "https://github.com/sandersirge/MorseCodeProgram/issues"

[project.gui-scripts]
morse-trainer = "src.main.python.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.wav", "*.mp3", "*.txt", "*.json"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "W191"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
addopts = "--html=../reports/report.html --self-contained-html"
markers = [
    "smoke: fast bootstrap sanity checks (deselect with '-m not smoke')",
]
